--- a/roles/vim-ide/tasks/main.yml
+++ b/roles/vim-ide/tasks/main.yml
@@ -4,6 +4,9 @@
 - name: Include Vim-speciic variables
   include_vars: "{{ vim_package }}.yml"
 
+- name: Include os family specific variables
+  include_vars: "{{ ansible_os_family }}.yml"
+
 - name: Clone vim repo
   git:
     repo: 'https://github.com/vstoppe/vim.git'
@@ -12,7 +15,7 @@
 
 - name: Ensure (neo)vim packages
   package:
-    name: [ "{{ vim_package }}", psutils, socat, python-pip, git, python-pynvim ]
+    name: [ "{{ vim_package }}", "{{ vim_python_package }}", psutils, socat, python-pip, git ]
     state: present
 
 - name: Ensure active vimrc link
