Works now with vagrant

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,14 +1,16 @@
 [defaults]
-DEFAULT_HOST_LIST=hosts
-#PLAYBOOK_VARS_ROOT = all
+#DEFAULT_HOST_LIST=~/.ansible/hosts,~/.ansible/vagrant_inventory
+#PLAYBOOK_VARS_ROOT=bottom
 
-DEFAULT_ROLES_PATH:~/workspace/ansible/roles:~/workspace/ansible/profile:~/workspace/ansible/modules
+
+DEFAULT_ROLES_PATH=~/ansible/roles:~/ansible/galaxy
 
 #DEFFAUT_HOST_LIST=~/.ansible/hosts
 #ANSIBLE_INVENTORY=~/.ansible/hosts
 
 ### 'inventory' must be defined to point ansible to the right host_vars and group_vars directories. They will be referenced on the same directory. Otherwise -i needed to specified.
-inventory=~/.ansible/hosts
+#inventory=~/.ansible/hosts
+#inventory=~/.ansible/vagrant_inventory
 
 [inventroy]
 INVENTORY_CACHE_ENABLED=true
