Common role now ready for hdparm configuration

--- a/roles/common/handlers/main.yml
+++ b/roles/common/handlers/main.yml
@@ -1,2 +1,10 @@
 ---
 # handlers file for common
+
+
+- name: hdparm_restart
+  service:
+    daemon_reload: true
+    enabled: true
+    name: hdparm
+    state: restarted
