--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -1,16 +1,18 @@
 ---
 # tasks file for common
 
-### This is used to determine if we are on a virtualized plattform
 - name: Register number of modules for virtualisation
+        # This is later used to determine if we are on a virtualized plattform
   shell:
     cmd: lsmod | grep -e vbox -e virtio -e vmware | wc -l
   register: virt_modules
 
+- include_vars: "{{ ansible_os_family }}.yaml"
 
 # Incluse task for managing users
 - include_tasks: users.yml
 - include_tasks: packages.yml
+- include_tasks: sleepy_disks.yml
 
 - name: Enable fstrim timer
   service:
