--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -17,7 +17,7 @@
 
 - name: Install common packages for all plattforms
   package:
-    name: [ acl, git ]
+    name: [ acl, at, gdisk, git ]
     state: present
     # acl can be necessary for become_user and getting privileges for temp file in vim role
 
