It is important to define the defolt hosts inventory file

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -9,9 +9,8 @@ DEFAULT_ROLES_PATH=~/ansible/roles:~/ansible/galaxy
 #ANSIBLE_INVENTORY=~/.ansible/hosts
 
 ### 'inventory' must be defined to point ansible to the right host_vars and group_vars directories. They will be referenced on the same directory. Otherwise -i needed to specified.
-#inventory=~/.ansible/hosts
+inventory=~/.ansible/hosts
 #inventory=~/.ansible/vagrant_inventory
 
 [inventroy]
 INVENTORY_CACHE_ENABLED=true
-
