--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -9,6 +9,8 @@
 
 - include_vars: "{{ ansible_os_family }}.yml"
 
+- include_tasks: "{{ ansible_os_family }}.yml"
+
 # Incluse task for managing users
 - include_tasks: users.yml
 - include_tasks: packages.yml
@@ -17,7 +19,7 @@
 
 - name: Install common packages for all plattforms
   package:
-    name: [ acl, at, gdisk, git ]
+    name: [acl, at, gdisk, git]
     state: present
     # acl can be necessary for become_user and getting privileges for temp file in vim role
 
