added admin-workstation playbook

--- a/site.yml
+++ b/site.yml
@@ -1,5 +1,5 @@
 ---
+- import_playbook: playbooks/admin-workstation.yml
 - import_playbook: playbooks/btrfs-backup-srv.yml
 - import_playbook: playbooks/docker-srv.yml
 - import_playbook: playbooks/vagrant.yml
-  #- import_playbook: docker-srv.yml
