vim now only gets installd for specified users

--- a/roles/vim-ide/tasks/main.yml
+++ b/roles/vim-ide/tasks/main.yml
@@ -7,23 +7,10 @@
 - name: Include os family specific variables
   include_vars: "{{ ansible_os_family }}.yml"
 
-- name: Clone vim repo
-  git:
-    repo: 'https://github.com/vstoppe/vim.git'
-    dest: "{{ vim_global_config_dir }}"
-    update: false
-
 - name: Ensure (neo)vim packages
   package:
-    name: [ "{{ vim_package }}", "{{ vim_python_package }}", psutils, socat, python-pip, git ]
+    name: ["{{ vim_package }}", "{{ vim_python_package }}", psutils, socat, python-pip, git]
     state: present
-
-- name: Ensure active vimrc link
-  file:
-    dest: "{{ vim_global_config_file }}"
-    src: "{{ vim_global_config_dir }}/vimrc"
-    state: link
-    force: yes
 
 - name: Ensure main dir for vim is set
   lineinfile:
@@ -33,3 +20,10 @@
   with_items:
     - export vimdir="{{ vim_global_config_dir }}"
     - export EDITOR="{{ editor }}"
+
+- include_tasks: configure_vim.yml
+  vars:
+    user: "{{ vim_user }}"
+  with_items: "{{ vim_users }}"
+  loop_control:
+    loop_var: vim_user
