Addd configuration of user based ssh-agent

--- a/roles/common/tasks/Archlinux.yml
+++ b/roles/common/tasks/Archlinux.yml
@@ -18,5 +18,6 @@
   command: makepkg -si --noconfirm
   args:
     chdir: rua
+    creates: /usr/bin/rua
   become: false
   become_user: "{{ ansible_user }}"
