--- a/roles/vim-ide/tasks/configure_vim.yml
+++ b/roles/vim-ide/tasks/configure_vim.yml
@@ -21,6 +21,12 @@
     dest: "{{ home.stdout }}/.vim"
     update: false
 
+- name: Ensure right permissions for vimdir
+  file:
+    name: "{{ home.stdout }}/.vim"
+    owner: "{{user}}"
+    recurse: true
+
 - name: Ensure active vimrc link for normal vim
   file:
     dest: "{{ home.stdout }}/.vimrc"
@@ -36,6 +42,8 @@
   with_items:
     - .config
     - .config/nvim
+    - .local/share/nvim/site
+    - .local/share/nvim/site/autoload
   loop_control:
     loop_var: dirs
 
@@ -45,3 +53,10 @@
     src: "{{ home.stdout }}/.vim/vimrc"
     state: link
     force: true
+
+
+- name: get vimplug
+  get_url:
+    url: https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim
+    dest: "{{home.stdout}}/.local/share/nvim/site/autoload/plug.vim"
+    owner: "{{user}}"
