--- a/site.yml
+++ b/site.yml
@@ -1,5 +1,8 @@
 ---
+- import_playbook: playbooks/adblocker.yml
 - import_playbook: playbooks/admin-workstation.yml
+- import_playbook: playbooks/apply-vim.yml
+- import_playbook: playbooks/apply-zsh.yml
 - import_playbook: playbooks/btrfs-backup-srv.yml
 - import_playbook: playbooks/docker-srv.yml
 - import_playbook: playbooks/vagrant.yml
