--- a/roles/vim-ide/vars/Debian.yml
+++ b/roles/vim-ide/vars/Debian.yml
@@ -1,5 +1,11 @@
 ---
+# Debian variables:
 
 vim_extra_package:
+  - psutils
   - python-neovim
+  - python-pip
+  - python3-pip
+  - python3-setuptools  # needed for pip
+  - python3-venv        # needed for pip
   - yarnpkg
