Corrected roles path

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -3,7 +3,7 @@
 #PLAYBOOK_VARS_ROOT=bottom
 
 
-DEFAULT_ROLES_PATH=~/ansible/roles:~/ansible/galaxy
+DEFAULT_ROLES_PATH=~/.ansible/roles:~/ansible/galaxy
 
 #DEFFAUT_HOST_LIST=~/.ansible/hosts
 #ANSIBLE_INVENTORY=~/.ansible/hosts
