Preparation for localhost/windows deployment

--- a/site.yml
+++ b/site.yml
@@ -5,3 +5,4 @@
 - import_playbook: playbooks/btrfs-backup-srv.yml
 - import_playbook: playbooks/docker-srv.yml
 - import_playbook: playbooks/vagrant.yml
+- import_playbook: playbooks/windows-workstation.yml
