--- a/playbooks/deploy_macos_packages.yml
+++ b/playbooks/deploy_macos_packages.yml
@@ -20,6 +20,7 @@
       - ansible
       - ansible-lint
       - pynvim
+      - bitwarden-simple-cli # needed for Ansble Bitwarden module
 
 
   tasks:
