--- a/roles/common/tasks/Archlinux.yml
+++ b/roles/common/tasks/Archlinux.yml
@@ -2,22 +2,22 @@
 ### For now dummy file for Archlinux specific tasks
 
 
-- name: Apply rua dependencies
+- name: Apply yay dependencies
   package:
-    name: [git, base-devel, bubblewrap-suid, xz, shellcheck, cargo]
+    name: [git, base-devel, xz, shellcheck]
     state: latest
 
-- name: clone rua (AUR management)
-  command: git clone https://aur.archlinux.org/rua.git
+- name: clone yay (AUR management)
+  command: git clone https://github.com/Jguer/yay.git  
   args:
-    creates: rua
+    creates: yay
   become: false
   become_user: "{{ ansible_user }}"
 
-- name: install rua (AUR management)
+- name: install yay (AUR management)
   command: makepkg -si --noconfirm
   args:
-    chdir: rua
-    creates: /usr/bin/rua
+    chdir: yay
+    creates: /usr/bin/yay
   become: false
   become_user: "{{ ansible_user }}"
