--- a/roles/docker/defaults/main.yml
+++ b/roles/docker/defaults/main.yml
@@ -1,5 +1,11 @@
 ---
 # defaults file for docker
 
-# Version of docker_compose to install:
-docker_compose_version: 1.27.4
+
+docker_environment:
+  admin_email: name@domain.tld
+  docker_data: /mnt/docker
+  docker_workspace: /etc/docker/workspace
+  domain: domain.tld
+  frontend_ip: 1.2.3.4
+
