zwei coole pakete hinzugefügt

--- a/playbooks/deploy_macos_packages.yml
+++ b/playbooks/deploy_macos_packages.yml
@@ -10,7 +10,9 @@
       - docker-compose
       - gnupg2
       - helm-3.7
+      - k9s
       - kind
+      - krew
       - kubectx
       - libvirt
       - macfuse
